added github icon link

--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ h1 {
 	/*margin-left: 100px;*/
 	padding: 0px 10px 0px 10px;
 	width: fit-content;
+	white-space: break-spaces;
 }
 
 p {
@@ -45,6 +46,7 @@ p {
 
 .socialicon {
 	height: 50px;
+	margin: 5px;
 }
 
 
