--- a/resource/shared/main.css
+++ b/resource/shared/main.css
@@ -60,7 +60,6 @@ div.interjection p {
 /*        Table       */
 /* ------------------ */
 table {
-	/* border: 1px solid black; */
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -103,7 +102,7 @@ img.linkicon {
 	margin-bottom: -0.25em;
 }
 img.tableimg {
-	height: 150px;
+	width: 20vw;
 	margin: 0px;
 }
 
@@ -132,7 +131,8 @@ details {
 	margin: 10px 30px;
 	padding: 10px;
 	border: 1px solid black;
-	background-color: azure;
+	/* background-color: azure; */
+	background-color: #e6ffff;
 	border-radius: 10px;
 }
 
