--- a/resource/polynomial/polynomial.css
+++ b/resource/polynomial/polynomial.css
@@ -1,6 +1,6 @@
 .parallax {
-	background-image: url("resource/polynomial/header.jpg");
-	min-height: 600px;
+	background-image: url("irina-iriser-2Y4dE8sdhlc-unsplash.png");
+	min-height: 65vh;
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
