--- a/resource/shared/main.css
+++ b/resource/shared/main.css
@@ -11,6 +11,12 @@ h1 {
 	font-family: 'Playfair Display', Georgia, serif;
 	font-size: 50px;
 }
+/* Custom Centered H1 */
+h1.centered {
+	padding: 0px 10px 0px 10px;
+	width: fit-content;
+	white-space: break-spaces;
+}
 
 h2 {
 	font-family: Montserrat, 'Trebuchet MS', sans-serif;
